binding: mediaplayer: rename binding from gstreamer to mediaplayer
Bug-AGL: SPEC-931
Change-Id: If6e4ebbb60213ff82f630cea3e06df49c0d808a0
Signed-off-by: Matt Ranostay <matt.ranostay@konsulko.com>

--- a/conf.d/wgt/config.xml.in
+++ b/conf.d/wgt/config.xml.in
@@ -13,7 +13,7 @@
 	</feature>
 
 	<feature name="urn:AGL:widget:provided-api">
-		<param name="gstreamer" value="ws" />
+		<param name="mediaplayer" value="ws" />
 	</feature>
 
 	<feature name="urn:AGL:widget:required-api">
