--- a/binding/CMakeLists.txt
+++ b/binding/CMakeLists.txt
@@ -39,3 +39,6 @@ PROJECT_TARGET_ADD(afm-mediaplayer-binding)
 	INSTALL(TARGETS ${TARGET_NAME}
 		LIBRARY DESTINATION ${BINDINGS_INSTALL_DIR})
 
+	if(HAVE_4A_FRAMEWORK)
+		add_definitions(-DHAVE_4A_FRAMEWORK)
+	endif()
