--- a/conf.d/wgt/config.xml.in
+++ b/conf.d/wgt/config.xml.in
@@ -10,6 +10,7 @@
 	<feature name="urn:AGL:widget:required-permission">
 		<param name="urn:AGL:permission::public:hidden" value="required" />
 		<param name="urn:AGL:permission::public:no-htdocs" value="required" />
+		<param name="urn:AGL:permission:audio:public:audiostream" value="required" />
 	</feature>
 
 	<feature name="urn:AGL:widget:provided-api">
@@ -18,6 +19,7 @@
 
 	<feature name="urn:AGL:widget:required-api">
 		<param name="mediascanner" value="ws" />
+		<param name="ahl-4a" value="ws" />
 		<param name="@WIDGET_ENTRY_POINT@" value="local" />
 	</feature>
 </widget>
