Fix 4a call to match last API version
API has changed since the last update. Make adjustments to call the
right API.

Change-Id: I1613cd3633f2b2b096a421cd228185d376ce0b8e
Signed-off-by: Loïc Collignon <loic.collignon@iot.bzh>

--- a/binding/CMakeLists.txt
+++ b/binding/CMakeLists.txt
@@ -40,5 +40,6 @@ PROJECT_TARGET_ADD(afm-mediaplayer-binding)
 		LIBRARY DESTINATION ${BINDINGS_INSTALL_DIR})
 
 	if(HAVE_4A_FRAMEWORK)
+		message(STATUS "4a framework support enabled!")
 		add_definitions(-DHAVE_4A_FRAMEWORK)
 	endif()
