Change the way the config.xml is generated
The 4A framework support is optional, but when you enable it, you should
deploy another config.xml file. The old way does not work and the
config.xml does not mention that it depend on ahl-4a. This fix this
issue.

Change-Id: I76cbec248a9805360645199735d1cac39c0a701b
Signed-off-by: Loïc Collignon <loic.collignon@iot.bzh>

--- a/conf.d/wgt/config.xml.in
+++ b/conf.d/wgt/config.xml.in
@@ -18,6 +18,7 @@
 
 	<feature name="urn:AGL:widget:required-api">
 		<param name="mediascanner" value="ws" />
+		@OPTIONAL_DEPENDENCIES@
 		<param name="@WIDGET_ENTRY_POINT@" value="local" />
 	</feature>
 </widget>
