--- a/binding/CMakeLists.txt
+++ b/binding/CMakeLists.txt
@@ -27,6 +27,7 @@ PROJECT_TARGET_ADD(afm-mediaplayer-binding)
 
 	# Binder exposes a unique public entry point
 	SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
+		PREFIX "lib"
 		LABELS "BINDING"
 		LINK_FLAGS ${BINDINGS_LINK_FLAG}
 		OUTPUT_NAME ${TARGET_NAME}
@@ -34,10 +35,6 @@ PROJECT_TARGET_ADD(afm-mediaplayer-binding)
 
 	# Library dependencies (include updates automatically)
 	TARGET_LINK_LIBRARIES(${TARGET_NAME} ${link_libraries})
-
-	# installation directory
-	INSTALL(TARGETS ${TARGET_NAME}
-		LIBRARY DESTINATION ${BINDINGS_INSTALL_DIR})
 
 	if(HAVE_4A_FRAMEWORK)
 		add_definitions(-DHAVE_4A_FRAMEWORK)
