Use feature 'required-binding'
The feature "urn:AGL:widget:required-binding" is now
preferred to the feature "urn:AGL:widget:required-api"
for requiring a local binding.

Bug-AGL: SPEC-1800

Change-Id: I971e4ded174d731559fcb34fe450b6d8d87712b6
Signed-off-by: Jose Bollo <jose.bollo@iot.bzh>

--- a/conf.d/wgt/config.xml.in
+++ b/conf.d/wgt/config.xml.in
@@ -18,6 +18,9 @@
 
 	<feature name="urn:AGL:widget:required-api">
 		<param name="mediascanner" value="ws" />
+	</feature>
+
+	<feature name="urn:AGL:widget:required-binding">
 		<param name="@WIDGET_ENTRY_POINT@" value="local" />
 	</feature>
 </widget>
