--- a/conf.d/wgt/config-4a.xml.in
+++ b/conf.d/wgt/config-4a.xml.in
@@ -20,6 +20,9 @@
 	<feature name="urn:AGL:widget:required-api">
 		<param name="mediascanner" value="ws" />
 		<param name="ahl-4a" value="ws" />
+	</feature>
+
+	<feature name="urn:AGL:widget:required-binding">
 		<param name="@WIDGET_ENTRY_POINT@" value="local" />
 	</feature>
 </widget>
