--- a/conf.d/wgt/config.xml.in
+++ b/conf.d/wgt/config.xml.in
@@ -18,6 +18,10 @@
 
 	<feature name="urn:AGL:widget:required-api">
 		<param name="mediascanner" value="ws" />
+		<param name="Bluetooth-Manager" value="ws" />
+	</feature>
+
+	<feature name="urn:AGL:widget:required-binding">
 		<param name="@WIDGET_ENTRY_POINT@" value="local" />
 	</feature>
 </widget>
