binding: mediaplayer: add avrcp support
Proxy avrcp metadata from bluetooth binding to mediaplayer service
subscribers. Also allow transparent access to local and avrcp controls.

Bug-AGL: SPEC-1630
Change-Id: I75cfd71ee62976a9312474b81469b8eb13a06015
Signed-off-by: Matt Ranostay <matt.ranostay@konsulko.com>

--- a/conf.d/wgt/config.xml.in
+++ b/conf.d/wgt/config.xml.in
@@ -18,6 +18,7 @@
 
 	<feature name="urn:AGL:widget:required-api">
 		<param name="mediascanner" value="ws" />
+		<param name="Bluetooth-Manager" value="ws" />
 	</feature>
 
 	<feature name="urn:AGL:widget:required-binding">
