binding: mediaplayer: allow open/close of mediaplayer roles
When streams are paused or stopped the mediaplayer role needs to be
released to allow playback from other applications (i.e. radio)

Change-Id: Idd324d0695bfaa35401f05a95380d56df848009e
Signed-off-by: Matt Ranostay <matt.ranostay@konsulko.com>

--- a/conf.d/wgt/config.xml.in
+++ b/conf.d/wgt/config.xml.in
@@ -10,6 +10,7 @@
 	<feature name="urn:AGL:widget:required-permission">
 		<param name="urn:AGL:permission::public:hidden" value="required" />
 		<param name="urn:AGL:permission::public:no-htdocs" value="required" />
+		<param name="urn:AGL:permission:audio:public:audiostream" value="required" />
 	</feature>
 
 	<feature name="urn:AGL:widget:provided-api">
@@ -19,6 +20,7 @@
 	<feature name="urn:AGL:widget:required-api">
 		<param name="mediascanner" value="ws" />
 		<param name="Bluetooth-Manager" value="ws" />
+		<param name="ahl-4a" value="ws" />
 	</feature>
 
 	<feature name="urn:AGL:widget:required-binding">
