Add permission to use display and audio
Add the permission required to access the display
through the wayland socket and to access audio.

Bug-AGL: SPEC-2357

Change-Id: I360d48e8f6a695c25b11daa608df7cb4ca1c2014
Signed-off-by: José Bollo <jose.bollo@iot.bzh>

--- a/conf.d/wgt/config.xml.in
+++ b/conf.d/wgt/config.xml.in
@@ -11,6 +11,8 @@
 		<param name="urn:AGL:permission::public:hidden" value="required" />
 		<param name="urn:AGL:permission::public:no-htdocs" value="required" />
 		<param name="urn:AGL:permission:audio:public:audiostream" value="required" />
+		<param name="urn:AGL:permission::public:display" value="required" />
+		<param name="urn:AGL:permission::public:audio" value="required" />
 	</feature>
 
 	<feature name="urn:AGL:widget:provided-api">
