Initial steering wheel event support
Add initial basic support for next/previous events from signal composer,
mapping them to track forward/back. More work will be required to handle
the issues around both mediaplayer and radio both being running and
differentiating which should handle the events.

Bug-AGL: SPEC-3047

Signed-off-by: Scott Murray <scott.murray@konsulko.com>
Change-Id: I789181e1921aa55f4a9ec84deffe3f27560289c3

--- a/conf.d/wgt/config.xml.in
+++ b/conf.d/wgt/config.xml.in
@@ -22,6 +22,7 @@
 	<feature name="urn:AGL:widget:required-api">
 		<param name="mediascanner" value="ws" />
 		<param name="Bluetooth-Manager" value="ws" />
+		<param name="signal-composer" value="ws" />
 	</feature>
 
 	<feature name="urn:AGL:widget:required-binding">
